# fsarcamp

./: README.md  pyproject.toml
src/fsarcamp/: __init__.py  campaign_utils.py  common.py  fs_utils.py  fsar_lut.py  fsar_lut_crop.py  fsar_parameters.py  fsar_sr2ell_tif.py  geocoding.py  interpolation.py  lut.py  multilook.py  pauli_rgb.py  polsar.py  rat_io.py  slantrange2geo.py  ste_io.py
src/fsarcamp/_experimental/: cropex25_passes.py  hterra22_passes.py
src/fsarcamp/cropex14/: __init__.py  biomass.py  dates.py  field_map.py  field_map_examples.py  fsar.py  moisture.py  regions.py  regions2.py  test_field_map.py
src/fsarcamp/cropex14/moisturedata/: cropex14_soil_moisture_v1.csv  generate_moisture_csv.py
src/fsarcamp/cropex25/: __init__.py  dates.py  fsar.py  fsar_temp.py  moisture.py  regions.py
src/fsarcamp/deprecated/: cropex14_field_map.py  cropex14_field_map_examples.py  hterra22_moisture_old.py
src/fsarcamp/gabonx23/: fsar.py
src/fsarcamp/hterra22/: __init__.py  constants.py  dates.py  fsar.py  moisture.py  moisture_interpolated.py  moisture_v2.py  regions.py  regions2.py
src/fsarcamp/hterra22/moisturedata/: generate_moisture_csv.py  hterra22_soil_moisture_v3.csv
src/fsarcamp/ste_io/: README.md
